<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="4dp"
    app:cardBackgroundColor="@color/cardview_dark_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/dateF1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="22dp"
            android:text="@string/date"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/trackF1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dateF1"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="1dp"
            android:text="@string/track"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/roundF1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:text="@string/round"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/flagImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            app:srcCompat="@drawable/flag_bahrain" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>